--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -23,13 +23,12 @@
 
         <ui:define name="left">
             <h:form id="formMain">
-                <p:panelMenu>
+                <p:menu>
                     <p:submenu label="MRP HOME" styleClass="display:block">
                         <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkMRPCanManageProductComponent() || dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:submenu label="Product Management" styleClass="display:block">
-                            <p:submenu label="Product Catalog Management">
+                           <p:submenu label="Product Catalog Management">
                                 <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
                                 <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
                             </p:submenu>
@@ -37,17 +36,14 @@
                                 <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
                                 <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
                             </p:submenu>
-                        </p:submenu>
                     </c:if>
                     <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:submenu label="Material Requirement Planning" styleClass="display:block">
-                            <p:submenu label="Forecasting">
-                                <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                            <p:submenu label="MRP">
+                                <p:menuitem value="Material Requirement Planning" url="forecast.xhtml" />
                             </p:submenu>
-                        </p:submenu>
                     </c:if>
 
-                </p:panelMenu>
+                </p:menu>
             </h:form>
         </ui:define>
 
