--- a/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
@@ -43,7 +43,8 @@
                 </p:submenu>
                 <p:submenu label="Stock Audit" styleClass="display:block" >
                     <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
-                    <p:menuitem value="View Stock Audit Schedule" url="viewstockauditschedule.xhtml"/>
+                    <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml"/>
+                    <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
                 </p:submenu>
             </p:panelMenu>
         </ui:define>
