--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -45,6 +45,10 @@
                     <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml"/>
                     <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
                 </p:submenu>
+                 <p:submenu label="Warehourse Orders" styleClass="display:block" >
+                    <p:menuitem value="All Pending Orders" url="viewallpendingrequests"/>
+                    <p:menuitem value="View Stock Audit Schedule" url="viewstockauditschedule.xhtml"/>
+                </p:submenu>
             </p:panelMenu>
         </ui:define>
 
