--- a/MerlionPortal/MerlionPortal-war/web/crms/viewallquotations.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewallquotations.xhtml
@@ -22,7 +22,7 @@
 
         <ui:define name="left">
             <h:form id="formMain">
-                <p:panelMenu>
+                <p:menu>
                     <p:submenu label="CRMS HOME" styleClass="display:block">
                         <p:menuitem value="CRMS Home" url="crmsindex.xhtml"/>     
                         <p:menuitem value="Service Yellow Pages" url="serviceyellowpages.xhtml"/>
@@ -48,8 +48,9 @@
                     <p:submenu label="Key Account Management" styleClass="display:block">
                         <p:menuitem value="View Order Statistics" url="vieworderstatistics.xhtml" />
                         <p:menuitem value="Create Key Account" url="createkeyaccount.xhtml" />
+                        <p:menuitem value="View All Key Accounts" url="viewallkeyaccounts.xhtml" />
                     </p:submenu>
-                </p:panelMenu>
+                </p:menu>
             </h:form>
         </ui:define>
 
