--- a/MerlionPortal/MerlionPortal-war/web/wms/viewduestockaudit.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewduestockaudit.xhtml
@@ -51,7 +51,7 @@
 
         <ui:define name="right">
             <h:form id="formMain">
-                <p:panel id="panel" header=" View Stock Audit for a Warehouse">
+                <p:panel id="panel" header=" View Today's Stock Audit for a Warehouse">
                     <p:row>
                         <p:column>
                             <p:outputLabel for="warehouse" value="Warehouse Name: " />
@@ -60,14 +60,14 @@
                             <p:selectOneMenu id="warehouse" value="#{stockAuditViewEditManagedBean.warehouseId}"  style="width:210px" required="true" requiredMessage="Please select a warehouse">
                                 <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
                                 <f:selectItems value="#{stockAuditViewEditManagedBean.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId}   Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
-                                <p:ajax listener="#{stockAuditViewEditManagedBean.viewAllStockAudits()}" update="stockAuditData" />
+                                <p:ajax listener="#{stockAuditViewEditManagedBean.viewDueStockAudits()}" update="stockAuditData" />
                             </p:selectOneMenu>
                         </p:column>
                     </p:row>
 
                     <p:dataTable id="stockAuditData" var="stockaudit" sortMode="multiple" editable="true" value="#{stockAuditViewEditManagedBean.stockAudits}" 
                                  widgetVar="stockAuditTable"
-                                 emptyMessage="No stock audit records found"
+                                 emptyMessage="No stock audit records found for today"
                                  rowKey="#{stockaudit.stockAuditId}">
 
                         <f:facet name="header">                    
@@ -75,63 +75,39 @@
                                 <h:outputText value="Search Stock Audit fields:" />
                                 <p:inputText id="globalFilter" onkeyup="PF('stockAuditTable').filter()" />
                             </p:outputPanel>
-                        </f:facet>
+                        </f:facet>   
 
-                        <p:ajax event="rowEdit" listener="#{stockAuditViewEditManagedBean.onRowEdit}" />
-                        <p:ajax event="rowEditCancel" listener="#{stockAuditViewEditManagedBean.onRowCancel}"/>                
-
-                        <p:column  filterBy="#{stockaudit.storageBinId}" filterMatchMode="contains" headerText="Storage Bin ID">
+                        <p:column style="width:80px" filterBy="#{stockaudit.storageBinId}" filterMatchMode="contains" headerText="Storage Bin ID">
                             <h:outputText value="#{stockaudit.storageBinId}" />
                         </p:column>
 
-                        <p:column  filterBy="#{stockaudit.stockAuditId}" filterMatchMode="contains" headerText="Stock Audit ID">
+                        <p:column style="width:80px" filterBy="#{stockaudit.stockAuditId}" filterMatchMode="contains" headerText="Stock Audit ID">
                             <h:outputText value="#{stockaudit.stockAuditId}" />
                         </p:column>
 
-                        <p:column filterBy="#{stockaudit.supervisorId}" filterMatchMode="contains" headerText="Supervisor ID: " >
-                            <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{stockaudit.supervisorId}" /></f:facet>
-                                <f:facet name="input"><p:inputText value="#{stockaudit.supervisorId}" style="width:100%" label="supervisorId"/></f:facet>
-                            </p:cellEditor>
+                        <p:column style="width:80px" filterBy="#{stockaudit.supervisorId}" filterMatchMode="contains" headerText="Supervisor ID: " >
+                            <h:outputText value="#{stockaudit.supervisorId}" />
                         </p:column>
 
-                        <p:column filterBy="#{stockaudit.staffId}" filterMatchMode="contains" headerText="Staff ID: " >
-                            <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{stockaudit.staffId}" /></f:facet>
-                                <f:facet name="input"><p:inputText value="#{stockaudit.staffId}" style="width:100%" label="staffId"/></f:facet>
-                            </p:cellEditor>
+                        <p:column style="width:80px" filterBy="#{stockaudit.staffId}" filterMatchMode="contains" headerText="Staff ID: " >
+                            <h:outputText value="#{stockaudit.staffId}" />
                         </p:column>
 
                         <p:column filterBy="#{stockaudit.createdDate}" filterMatchMode="contains" headerText="Scheduled Date: " >
-                            <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{stockaudit.createdDate}" /></f:facet>
-                                <f:facet name="input"><p:calendar value="#{stockaudit.createdDate}"/></f:facet>
-                            </p:cellEditor>
+                            <h:outputText value="#{stockaudit.createdDate}" />
                         </p:column>
 
                         <p:column filterBy="#{stockAuditViewEditManagedBean.getAuditStatus(stockaudit.stockAuditStatus)}" filterMatchMode="contains" headerText="Stock Audit Status" >
-                            <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{stockAuditViewEditManagedBean.getAuditStatus(stockaudit.stockAuditStatus)}" /></f:facet>
-                                <f:facet name="input">
-                                    <h:selectOneMenu id="stockAuditStstus" value="#{stockaudit.stockAuditStatus}" label="stockAuditStstus"  style="color: black" >
-                                        <f:selectItem itemLabel="Select One" itemValue="" noSelectionOption="false" />
-                                        <f:selectItem itemLabel="Not Done" itemValue="0" />
-                                        <f:selectItem itemLabel="On Hold" itemValue="2" />
-                                    </h:selectOneMenu>
-                                </f:facet>
-                            </p:cellEditor>
+                            <h:outputText value="#{stockAuditViewEditManagedBean.getAuditStatus(stockaudit.stockAuditStatus)}" />
                         </p:column>
 
                         <p:column filterBy="#{stockaudit.remarks}" filterMatchMode="contains" headerText="Remarks: " >
-                            <p:cellEditor>
-                                <f:facet name="output"><h:outputText value="#{stockaudit.remarks}" /></f:facet>
-                                <f:facet name="input"><p:inputText value="#{stockaudit.remarks}" style="width:100%" label="remarks"/></f:facet>
-                            </p:cellEditor>
+                            <h:outputText value="#{stockaudit.remarks}" />
                         </p:column>
 
-                        <p:column style="width:48px">
-                            <p:commandButton action="#{stockAuditViewEditManagedBean.deleteStockAudit(stockaudit)}" update="stockAuditData" icon = "ui-icon-trash"  >
-                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this stock audit?" icon="ui-icon-alert" />
+                        <p:column headerText="">
+                            <p:commandButton action="stockauditprocess?faces-redirect=true" value="Proceed">
+                                <p:confirm header="Confirmation" message="Do you want to start the stock audit process?" icon="ui-icon-alert" />
                             </p:commandButton> 
                             <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
                                 <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
@@ -139,9 +115,6 @@
                             </p:confirmDialog>
                         </p:column>
 
-                        <p:column style="width:42px">
-                            <p:rowEditor />
-                        </p:column>
                     </p:dataTable>
                     <br></br>
                     <p:messages id="msgs" autoUpdate="true" closable="true" />
