add in algo for planned order-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
@@ -206,7 +206,9 @@
                             <p:panelGrid style="margin-top:20px">
                                 <f:facet name="header">
                                     <p:row>
-                                        <p:column colspan="7">Material Requirement Planning</p:column>
+                                        <p:column colspan="7"> 
+                                            MRP for component : add in later
+                                        </p:column>
                                     </p:row>
                                     <p:row>
                                         <p:column colspan="2" >Lead Time = 
