--- a/MerlionPortal/MerlionPortal-war/web/mrp/mps.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mps.xhtml
@@ -68,7 +68,7 @@
                         </p:row>
                         <p:row>
                             <p:column>
-                                <h:outputLabel for="buffer" value="Enter Buffer:" style="font-weight:bold" />
+                                <h:outputLabel for="buffer" value="Enter Buffer For The Final Product:" style="font-weight:bold" />
                             </p:column>
                             <p:column> 
                                 <p:inputText id="buffer" value="#{mPSBufferManagedBean.buffer}" />
